infra/k8s/comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: ravi113/comments
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 5000
      targetPort: 5000
