infra/k8s/event-bus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: ravi113/event-bus
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 8888
      targetPort: 8888
