infra/k8s/moderated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderated-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderated
  template:
    metadata:
      labels:
        app: moderated
    spec:
      containers:
        - name: moderated
          image: ravi113/moderated
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: moderated-service
spec:
  selector:
    app: moderated
  ports:
    - name: moderated
      protocol: TCP
      port: 6000
      targetPort: 6000
